date updated bug fix + footer updated

--- a/backend/templates/footer.html
+++ b/backend/templates/footer.html
@@ -19,19 +19,19 @@
 				</ul>
 			</div>
 			<div id="contribute" class="col">
-				<h4><span>About</span></h4>
+				<h4><span>Tools</span></h4>
 				<ul>
 					<li>
-						<a href="mailto:bojan@instaright.com" title="Contact Instaright developer">Developer</a>
+						<a href="/tools#instaright_firefox_addon" title="instaright Firefox Addon">Instaright Firefox Addon</a>
 					</li>
 					<li>
-						<a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a>
+						<a href="/tools#instaright_google_chrome_extension" title="instaright Chrome Extension">Instaright Chrome Extension</a>
 					</li>
 					<li>
-						<a href="http://getsatisfaction.com/instaright">Get Satisfaction</a>
+						<a href="/tools#instaright_bookmarklet" title="instaright bookmarklet">Instaright Bookmarklet</a>
 					</li>
 					<li>
-						<a href="http://feeds.feedburner.com/InstarightFeed">Instaright Feed</a>
+						<a href="/tools#instaright_im_notification" title="instaright messanger">Instaright IM notifications</a>
 					</li>
 				</ul>
 			</div>
@@ -72,6 +72,23 @@
 					</li>
 					<li>
 						<a href="/domain/businessinsider.com">Business Insider</a>
+					</li>
+				</ul>
+			</div>
+			<div id="contribute" class="col">
+				<h4><span>About</span></h4>
+				<ul>
+					<li>
+						<a href="mailto:bojan@instaright.com" title="Contact Instaright developer">Developer</a>
+					</li>
+					<li>
+						<a href="/privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a>
+					</li>
+					<li>
+						<a href="http://getsatisfaction.com/instaright">Get Satisfaction</a>
+					</li>
+					<li>
+						<a href="http://feeds.feedburner.com/InstarightFeed">Instaright Feed</a>
 					</li>
 				</ul>
 			</div>
