--- a/backend/templates/tools.html
+++ b/backend/templates/tools.html
@@ -78,13 +78,14 @@ $(document).ready(function(){
 
 
 <div id="inset">
-<div id="inset_shimmer">
-<div class="slogan">Instaright tools - Browser plugins, importers and more</div>
+<div id="inset_shimmer" >
+<div id="instaright_firefox_addon">
+<div class="slogan" id="instaright_google_chrome_extension">Instaright tools - Browser plugins, importers and more</div>
 <div id="addons">
 <div class="inline">
 <a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/"><img src="/static/images/instaright_firefox_addon.png" /></a>
 <div class="version">
-<ol><li>Version 0.4.2.3</li>
+<ol><li>Version 0.4.4</li>
 <li>(Works with Windows, MacOS, Linux)</li></ol>
 </div>
 <div class="install_steps">
@@ -112,15 +113,17 @@ $(document).ready(function(){
 </div>
 </div>
 </div>
+</div>
 <div class="clearfix"></div>
 <div class="line_separator" ></div>
-<div class="slogan">Instaright Bookmarklet</div>
-<div id="bookmarklet">
+<div class="slogan" id="instaright_bookmarklet">Instaright Bookmarklet</div>
+<div id="bookmarklet"> 
 <div id="bookmarklet_desc">
 <p>From now on use Instaright on all platfroms!</p>
 <p>iPhone, Android, Nokia platforms provide browsers that are compatible with Instaright bookmarklet and and help you save stories on-the-go!</p>
-<p>If you are on your iPhone or iPad, follow steps from below</p>
-<p>
+<p>If you are on your iPhone or iPad, follow steps from below:</p>
+<div id="install_ipad_ipod">
+<p> 
 1. Add this page as a bookmark <br />
 2. Select and copy the Javascript bookmarklet below to your clipboard. <br />
 3. Go to your bookmarks and edit the new bookmark.  Edit the name and paste the Javascript in the field for the URL.<br />
@@ -131,6 +134,7 @@ $(document).ready(function(){
 <textarea name="code" cols="50" rows="10" readonly>
 javascript:void((function()%7Bvar%20e=document.createElement('scr'+'ipt');e.setAttribute('type','text/javascript');e.setAttribute('src','{{ env }}/bookmarklet/javascript');document.body.appendChild(e)%7D)())
 </textarea><br />
+</div>
 <br>
 <p>We haven't forgot Safari or Opera users, now you can use instaright bookmarklet and boost your productivity.</p>
 <p id="bookmarklet_install">
