new icon - pontial

--- a/backend/templates/bookmarklet_frame.html
+++ b/backend/templates/bookmarklet_frame.html
@@ -55,7 +55,7 @@
 				<div id="errormessage" style="margin-bottom:1em; display:none"></div>
 				<div class="sharebox expanded" style="border-width:0px ;padding:30px; margin-left: 50px;">
 					<p class="howdy">Yee Haw! Claim your identity by logging at out website.</p>
-					<p class="howdy"><a href="#" onclick="sendToLoginPage()">(login)</a></p>
+					<p class="howdy"><a href="{{ env }}" target="_blank" >(login)</a></p>
 					<p class="howdy">*try again after login</p>
 				</div>
 
