--- a/backend/templates/footer.html
+++ b/backend/templates/footer.html
@@ -8,13 +8,13 @@
 				<h4><span>Social</span></h4>
 				<ul>
 					<li>
-						<a href="http://twitter.com/instaright" title="instaright on twitter">Twitter</a>
+						<a href="http://twitter.com/instaright" title="instaright on twitter" rel="me">Twitter</a>
 					</li>
 					<li>
-						<a href="http://facebook.com/instaright" title="instaright blog">Facebook</a>
+						<a href="http://facebook.com/instaright" title="instaright facebook page" rel="me">Facebook</a>
 					</li>
 					<li>
-						<a href="http://blog.instaright.com" title="instaright blog">Blog</a>
+						<a href="http://blog.instaright.com" title="instaright blog" rel="me">Blog</a>
 					</li>
 				</ul>
 			</div>
@@ -22,7 +22,7 @@
 				<h4><span>Tools</span></h4>
 				<ul>
 					<li>
-						<a href="/tools#instaright_firefox_addon" title="instaright Firefox Addon">Instaright Firefox Addon</a>
+						<a href="/tools#instaright_firefox_addon" title="instaright Firefox Addon" rel=>Instaright Firefox Addon</a>
 					</li>
 					<li>
 						<a href="/tools#instaright_google_chrome_extension" title="instaright Chrome Extension">Instaright Chrome Extension</a>
