--- a/backend/templates/tools.html
+++ b/backend/templates/tools.html
@@ -83,7 +83,7 @@ $(document).ready(function(){
 <div class="slogan" id="instaright_google_chrome_extension">Instaright tools - Browser plugins, importers and more</div>
 <div id="addons">
 <div class="inline">
-<a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/"><img src="/static/images/instaright_firefox_addon.png" /></a>
+<a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/" title="Download Instaright Firefox addon" rel="me"><img alt="Instaright Firefox Addon" src="/static/images/instaright_firefox_addon.png" /></a>
 <div class="version">
 <ol><li>Version 0.4.4</li>
 <li>(Works with Windows, MacOS, Linux)</li></ol>
@@ -91,7 +91,7 @@ $(document).ready(function(){
 <div class="install_steps">
 <p>Follow these steps to install Firefox addon</p>
 <ol>
-<li>1. Click on the icon above or go to the <em><a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/">Instaright Firefox Add-on page</a></em></li>
+<li>1. Click on the icon above or go to the <em><a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/" title="Downlaod Instaright Firefox Addon">Instaright Firefox Add-on page</a></em></li>
 <li>2. Click the green <em>Add to Firefox</em> button</li>
 <li>3. Click <em>Install</em> in the window that opens</li>
 <li>4. Restart Firefox</li>
@@ -99,7 +99,7 @@ $(document).ready(function(){
 </div>
 </div>
 <div class="inline">
-<a href="https://chrome.google.com/webstore/detail/mklfjcmekplnempnkclmdclnbedadphf" ><img src="/static/images/instaright_chrome_extension.png" /></a>
+<a href="https://chrome.google.com/webstore/detail/mklfjcmekplnempnkclmdclnbedadphf" title="Download Instaright Chrome Extension"><img src="/static/images/instaright_chrome_extension.png" alt="Instaright Chrome Extension" /></a>
 <div class="version">
 <ol><li>Version 0.1</li>
 <li>(Works with Windows, MacOS, Linux)</li></ol>
@@ -107,7 +107,7 @@ $(document).ready(function(){
 <div class="install_steps">
 <p>Follow these steps to install Instaright Chrome extension</p>
 <ol>
-<li>1. Click on the icon above or go to the <em><a href="https://chrome.google.com/webstore/detail/mklfjcmekplnempnkclmdclnbedadphf">Instaright Chrome Extension page</a></em></li>
+<li>1. Click on the icon above or go to the <em><a href="https://chrome.google.com/webstore/detail/mklfjcmekplnempnkclmdclnbedadphf" title="Instaright Chrome Extension">Instaright Chrome Extension page</a></em></li>
 <li>2. Click blue <em>Install</em></li>
 </ol>
 </div>
